WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168965
[Win] Popup menus are too small in HiDPI mode.
https://bugs.webkit.org/show_bug.cgi?id=168965
Summary
[Win] Popup menus are too small in HiDPI mode.
Per Arne Vollan
Reported
2017-02-28 04:06:05 PST
We need to scale with the device scale factor.
Attachments
Patch
(3.74 KB, patch)
2017-02-28 04:11 PST
,
Per Arne Vollan
bfulgham
: review+
bfulgham
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-02-28 04:11:09 PST
Created
attachment 302931
[details]
Patch
Per Arne Vollan
Comment 2
2017-02-28 05:49:28 PST
rdar://problem/30742143
Brent Fulgham
Comment 3
2017-02-28 10:56:54 PST
Comment on
attachment 302931
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=302931&action=review
R=me. Looks good, but please consolidate that for handling code.
> Source/WebCore/platform/win/PopupMenuWin.cpp:623 > + font.update(m_popupClient->fontSelector());
It seems like this code could be shared with the above method.
Per Arne Vollan
Comment 4
2017-03-01 00:38:02 PST
(In reply to
comment #3
)
> Comment on
attachment 302931
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=302931&action=review
> > R=me. > > Looks good, but please consolidate that for handling code. > > > Source/WebCore/platform/win/PopupMenuWin.cpp:623 > > + font.update(m_popupClient->fontSelector()); > > It seems like this code could be shared with the above method.
Thanks for reviewing! I will update the patch.
Per Arne Vollan
Comment 5
2017-03-01 00:49:43 PST
Committed <
http://trac.webkit.org/changeset/213211
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug