[Win] Popup menus are too small in HiDPI mode. https://bugs.webkit.org/show_bug.cgi?id=168965

Reviewed by Brent Fulgham.

Scale font with device scale factor.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::show):
(WebCore::PopupMenuWin::calculatePositionAndSize):
(WebCore::PopupMenuWin::paint):
* platform/win/PopupMenuWin.h:


Canonical link: https://commits.webkit.org/186011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213211 268f45cc-cd09-0410-ab3c-d52691b4dbfc